# cweb

./: .gitignore  CMakeLists.txt  CONTRIBUTOR_INSTALL.md  Dockerfile.dev  NOTICE  README.md  benchhtmlgenerator.c  docker-compose.yml  normal-Dockerfile
app/: main.c
app/plugins/: async_state_machine.c  async_state_machine.h
app/plugins/db/: mariadb_async.c  mariadb_async.h
app/plugins/fetch/: github_fetcher.c  github_fetcher.h
app/routes/: home.page.c  home.page.h
app/routes/datahub/: datahub.page.c  datahub.page.h
app/routes/easyfetch/: easyfetch.page.c  easyfetch.page.h
app/routes/fetch/: fetch.page.c  fetch.page.h
app/routes/fiftyk/: fiftyk.page.c  fiftyk.page.h
app/routes/fivek/: fivek.page.c  fivek.page.h
app/routes/helloworld/: helloworld.page.c  helloworld.page.h
app/routes/hundredk/: hundredk.page.c  hundredk.page.h
app/routes/longtime/: longtime.page.c  longtime.page.h
app/routes/onek/: onek.page.c  onek.page.h
app/routes/speedtest/: speedtest.page.c  speedtest.page.h
app/routes/tenk/: tenk.page.c  tenk.page.h
app/routes/tmplateroute/: tmplateroute.page.c  tmplateroute.page.h
app/routes/twohundredk/: twohundredk.page.c  twohundredk.page.h
app/templates/: cwagger.template.cweb  fetch.template.cweb  fiftyk.template.cweb  fivek.template.cweb  home.template.cweb  hundredk.template.cweb  onek.template.cweb  tenk.template.cweb  twohundredk.template.cweb
console/: CMakeLists.txt  LICENSE  build.c  build.h  commands.c  commands.h  common.c  common.h  create_command.c  create_command.h  file_utils.c  file_utils.h  main.c  security.c  security.h  version_command.c  version_command.h
console/debian/: changelog  control  rules
framework/: CMakeLists.txt  README.md  cweb.pc.in
framework/cmake/: cweb-config.cmake.in
framework/include/cweb/: async.h  autofree.h  codegen.h  compress.h  cwagger.h  cweb.h  dev.h  fetch.h  fileserver.h  http.h  leak_detector.h  logger.h  pathutils.h  routing.h  server.h  session.h  speedbench.h  template.h
framework/src/: Makefile
framework/src/Autofree/: autofree.c
framework/src/Cwagger/: cwagger.c  cwagger.template.c  cwagger.template.h  cwaggerdoc_page.c  cwaggerdoc_page.h
framework/src/Http/: http.c
framework/src/Logger/: logger.c
framework/src/PathUtils/: pathutils.c
framework/src/Routing/: routing.c
framework/src/Server/: server.c  server_pending.c
framework/src/Sessions/: session.c
framework/src/SpeedBench/: speed_benchmark.c
framework/src/async/: async.c
framework/src/compress/: brotli.c  compress.c  compress_internal.h  compress_utils.c  gzip.c  minify.c  minify_css.c  minify_html.c  minify_js.c
framework/src/dev/: mode.c
framework/src/fetch/: README.md  cweb_fetch_internal.h  fetch.c  fetch_core.c  fetch_event.c  fetch_json.c  fetch_request.c  fetch_response.c  fetch_utils.c
framework/src/filecache/: cleanup.c  configuration.c  crud.c  fileserver.c  fileserver_internal.h  fileserver_state.c  getter_isser.c  rw_utils.c  serve.c
framework/src/leak_detector/: leakdetect.c
framework/src/templatengine/: ast.c  codegen.c  codegen_css.c  codegen_emit_common.c  codegen_html.c  codegen_internal.h  codegen_signature.c  lexer.c  parser.c  runtime.c  security.c
